# sap-scripting-rs

./: Cargo.toml  README.md  output
.github/workflows/: rust-publish.yml
examples/: charge.rs  simple.rs
src/: idispatch_ext.rs  lib.rs  traits.rs  types.rs  utils.rs  variant_ext.rs
