[package]
name = "sap-scripting"
description = "A Rust interface to the SAP Scripting COM objects."
repository = "https://github.com/lilopkins/sap-scripting-rs"
authors = [ "Lily Hopkins <lily@hpkns.uk>" ]
version = "0.4.1"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
pretty_env_logger = "0.5.0"

[dependencies]
com-shim = "0.4.2"
windows = { version = "0.52.0", features = [ "Win32_System_Com", "Win32_Foundation", "Win32_System_Ole", "Win32_System_Variant" ] }
tracing = "0.1.41"
